db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: test
        - name: MYSQL_PASSWORD
          value: eoj
        - name: MYSQL_ROOT_PASSWORD
          value: root
        - name: MYSQL_USER
          value: joe
        image: mariadb
        name: db
        resources: {}
      restartPolicy: Always
status: {}
