entry-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: entry
  name: entry
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: entry
    spec:
      containers:
      - args:
        - nginx
        - -g
        - daemon off;
        image: nginx
        name: entry
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: entry-claim0
      restartPolicy: Always
      volumes:
      - name: entry-claim0
        persistentVolumeClaim:
          claimName: entry-claim0
status: {}
