ingress.yaml
#apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-entry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
 - host: doctor2.local
   http:
     paths:
     - path: /(.+)
       backend:
         serviceName: entry
         servicePort: 80
